// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Consent Banner Container should correctly render amp banner 1`] = `
<div>
  Amp Cookie banner
</div>
`;

exports[`Consent Banner Container should correctly render canonical banner 1`] = `
<div>
  Canonical Cookie banner
</div>
`;
